--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.mustache.suffix=.html
 logging.level.org.springframework.web=DEBUG
+
+# BD
+spring.datasource.url=jdbc:mysql://localhost:3306/inforumdb
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+
+# securtiy
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=inforum
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=inforum
