--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inforumdb
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # securtiy
 server.port=8443
@@ -14,3 +14,8 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=inforum
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=inforum
+
+logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
