--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,3 +23,11 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # error
 server.error.whitelabel.enabled=false 
 server.error.path=/error
+
+# email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=inforum171@gmail.com
+spring.mail.password=qqln ghbr figq gmjm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
