--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,6 +28,6 @@ server.error.path=/error
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=inforum171@gmail.com
-spring.mail.password=qqln ghbr figq gmjm
+spring.mail.password=zvwv ivwf anpc ojjo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
