--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,6 +62,11 @@
   			<artifactId>jaxb-api</artifactId>
   			<version>2.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.12</version>
+		</dependency>
 
 	</dependencies>
 	
