add SPAController and update DockerfileSpring

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -33,3 +33,5 @@ spring.mail.username=inforum171@gmail.com
 spring.mail.password=zvwv ivwf anpc ojjo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
