--- a/docker/DockerfileSpring
+++ b/docker/DockerfileSpring
@@ -17,7 +17,7 @@ RUN npm install
 COPY frontend/ .
 
 # Construye la aplicación Angular para producción
-RUN npm run build -- --prod --base-href="/new/"
+RUN npm run build -- --configuration production --base-href=/new/
 
 
 #################################################
