--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^4.4.2",
     "express": "^4.18.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
