--- a/docker/DockerfileSpring
+++ b/docker/DockerfileSpring
@@ -8,13 +8,13 @@ FROM node:20.12.1 as angular-build
 WORKDIR /angular-app
 
 # Copia el package.json y package-lock.json (o yarn.lock si usas yarn)
-COPY frontend/package*.json ./
+COPY frontendFix/package*.json ./
 
 # Instala todas las dependencias necesarias
 RUN npm install
 
 # Copia el código fuente de la aplicación Angular
-COPY frontend/ .
+COPY frontendFix/ .
 
 # Construye la aplicación Angular para producción
 RUN npm run build -- --configuration production --base-href=/new/
@@ -38,7 +38,7 @@ RUN mvn dependency:go-offline
 COPY backend/src /project/src
 
 # Copia los archivos estáticos de Angular al directorio correcto dentro del proyecto Spring Boot
-COPY --from=angular-build /angular-app/dist/frontend/browser/ /project/src/main/resources/static/new/
+COPY --from=angular-build /angular-app/dist/frontend-fix/browser/ /project/src/main/resources/static/new/
 
 # Compila el proyecto
 RUN mvn clean package -DskipTests
