--- a/frontendFix/package.json
+++ b/frontendFix/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.2",
     "express": "^4.18.2",
     "jquery": "^3.3.1",
+    "ngx-bootstrap": "^12.0.0",
     "popper.js": "^1.14.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
